fixed viewheight on mobile

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 
 .github {
 	scale: 50%;
-	margin: 2rem 0;
+	margin: 1rem 0;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -203,6 +203,7 @@ button:active {
 		font-size: large;
 	}
 	#calculator-app {
+		height: 100svh;
 		width: 100vw;
 	}
 	#table {
